--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build --mode production",
+  "preview": "vite preview"
+},
   "dependencies": {
     "@million/lint": "^0.0.39",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -52,6 +51,7 @@
     "node-appwrite": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-portal": "^4.3.0",
     "react-router-dom": "^7.2.0",
