--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build --mode production",
-  "preview": "vite preview"
-},
+    "dev": "vite",
+    "build": "vite build --mode production",
+    "preview": "vite preview",
+    "sitemap": "node --experimental-specifier-resolution=node --loader ts-node/esm ./scripts/generate-sitemap.js"
+  },
   "dependencies": {
     "@million/lint": "^0.0.39",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -51,15 +52,17 @@
     "node-appwrite": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-portal": "^4.3.0",
     "react-router-dom": "^7.2.0",
     "react-youtube": "^10.1.0",
+    "sitemap": "^8.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
-    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2"
   },
@@ -79,6 +82,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "process": "^0.11.10",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
