--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sitemap": "node --experimental-specifier-resolution=node --loader ts-node/esm ./scripts/generate-sitemap.js"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@million/lint": "^0.0.39",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
